--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "class-variance-authority": "^0.7.0",
@@ -30,11 +31,11 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "eslint-config-prettier": "^9.1.0"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
